--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -552,6 +552,7 @@ jobs:
             playbooks/cfo_extract
             playbooks/alfresco_wallet
             playbooks/oracle_statspack
+            playbooks/mis_database_links
             common/*
             playbooks/ansible.cfg
           path: operations
