--- a/playbooks/alfresco_wallet/alfresco_wallet/tasks/check-password.yml
+++ b/playbooks/alfresco_wallet/alfresco_wallet/tasks/check-password.yml
@@ -14,24 +14,31 @@
     path: "{{ wallet_working_dir }}"
     state: directory
 
-- name: Copy Existing Wallet into Working Directory
-  copy:
-    src: "{{ wallet_dir }}/{{ item }}"
-    dest: "{{ wallet_working_dir }}/{{ item }}"
-    remote_src: true
-  loop:
-    - cwallet.sso
-    - ewallet.p12
+- block:
+    - name: Copy Existing Wallet into Working Directory
+      copy:
+        src: "{{ wallet_dir }}/{{ item }}"
+        dest: "{{ wallet_working_dir }}/{{ item }}"
+        remote_src: true
+      loop:
+        - cwallet.sso
+        - ewallet.p12
 
-- name: Use Dummy Password Change to Confirm the Copied Wallet Password
-  shell: |
-    . ~/.bash_profile
-    orapki wallet change_pwd -wallet {{ wallet_working_dir }} -oldpwd {{ system_pwd}} -newpwd {{ system_pwd }}x
-  register: dummy_password_change
-  failed_when: false
-  changed_when: false
-  no_log: true
+    - name: Use Dummy Password Change to Confirm the Copied Wallet Password
+      shell: |
+        . ~/.bash_profile
+        orapki wallet change_pwd -wallet {{ wallet_working_dir }} -oldpwd {{ system_pwd}} -newpwd {{ system_pwd }}x
+      register: dummy_password_change
+      failed_when: false
+      changed_when: false
+      no_log: true
 
-- name: Set Password Correct Flag
-  set_fact:
-    password_correct: "{{ false if (dummy_password_change is search('.*incorrect password.*')) else true }}"
+    - name: Set Password Correct Flag
+      set_fact:
+        password_correct: "{{ false if (dummy_password_change is search('.*incorrect password.*')) else true }}"
+
+  rescue:
+    # If any failure in copying the existing wallet we default the password status to incorrect
+    - name: Assume Password Incorrect
+      set_fact:
+        password_correct: false
