--- a/playbooks/alfresco_wallet/alfresco_wallet/tasks/main.yml
+++ b/playbooks/alfresco_wallet/alfresco_wallet/tasks/main.yml
@@ -1,27 +1,7 @@
 ---
-# - name: Check location of spg.tfvar when run from CodeBuild
-#   local_action: stat path="{{ inventory_dir }}/../{{ environment_name }}/sub-projects/spg.tfvars"
-#   become: no
-#   register: spg_tfvars_location_1
-
-# - name: Get the Alfresco URL from the Terraform File (CodeBuild)
-#   set_fact:
-#      spg_document_rest_service_public_url: "{{ lookup('file', '{{ spg_tfvars_location_1.stat.path }}') | regex_search('.*SPG_DOCUMENT_REST_SERVICE_PUBLIC_URL.*') | regex_replace('.*=(.*)','\\1') | replace('\"','') }}"
-#   when: spg_tfvars_location_1.stat.exists
-
-# - name: Check location of spg.tfvar when ansible run directly from command line
-#   local_action: stat path="{{ inventory_dir }}/../sub-projects/spg.tfvars"
-#   become: no
-#   register: spg_tfvars_location_2
-
-# - name: Get the Alfresco URL from the Terraform File (Command Line)
-#   set_fact:
-#      spg_document_rest_service_public_url: "{{ lookup('file', '{{ spg_tfvars_location_2.stat.path }}') | regex_search('.*SPG_DOCUMENT_REST_SERVICE_PUBLIC_URL.*') | regex_replace('.*=(.*)','\\1') | replace('\"','') }}"
-#   when: spg_tfvars_location_2.stat.exists
-
 - name: Get Alfresco Host
   set_fact:
-    alfresco_host: "{{ spg_document_rest_service_public_url | default('NOT CONFIGURED') | regex_replace('https://(.*?)/.*$','\\1') }}"
+    alfresco_host: "{{ alfresco_public_url | default('NOT CONFIGURED') | regex_replace('https://(.*?)/.*$','\\1') }}"
 
 - name: Check that we can connect to the Alfresco server from the host
   uri:
@@ -43,8 +23,8 @@
     - name: Set Alfresco URL Specific for this environment
       script: set_alfresco_url.sh
       environment:
-        ALFRESCO_URL: "{{ spg_document_rest_service_public_url | trim }}"
-      when: spg_document_rest_service_public_url | trim !=  ( getalfrescourl.stdout | default('NOT CONFIGURED') )
+        ALFRESCO_URL: "{{ alfresco_public_url | trim }}"
+      when: alfresco_public_url | trim !=  ( getalfrescourl.stdout | default('NOT CONFIGURED') )
 
     - name: Create Access Control Entry for the Alfresco Host
       script: create_host_ace.sh
@@ -81,7 +61,7 @@
         patterns: alf.[0-9][0-9].crt
       register: files_to_delete
 
-    - name: Remove Any Pre-Existing Individual Cerificate Files
+    - name: Remove Any Pre-Existing Individual Certificate Files
       file:
         path: "{{ item.path }}"
         state: absent
@@ -142,7 +122,6 @@
     # We will use the System Password as the Wallet Password
     - name: Get system password from Secrets Manager
       shell: |
-        export PATH=$PATH:/usr/local/bin
         aws secretsmanager get-secret-value --secret-id {{ environment_name }}-oracle-db-dba-passwords --region {{ region }} --query SecretString --output text| jq -r .system
       register: oradb_system_password
       no_log: true
@@ -222,10 +201,14 @@
       with_items: "{{ certificate_files.files }}"
       register: tmp_certificates
 
+    - name: Initialise Dictionary of Certificates
+      set_fact:
+        certificate_dict: {}
+
     - name: Create Dictionary of Certificates Available to be Loaded into Wallet
       set_fact:
-        certificate_dict: "{{ certificate_dict | combine(item) }}"
-      with_items: "{{ tmp_certificates.results | map(attribute='ansible_facts.tmp_certificate') | list }}"
+        certificate_dict: "{{ certificate_dict | combine(item, list_merge='append') }}"
+      loop: "{{ tmp_certificates.results | map(attribute='ansible_facts.tmp_certificate') | list }}"
 
     - name: Calculate Checksums for all Certificates Available to be Loaded
       include_tasks: get-checksum.yml
