--- a/.github/workflows/oracle-db-aws-snapshot.yml
+++ b/.github/workflows/oracle-db-aws-snapshot.yml
@@ -91,7 +91,7 @@ jobs:
     name: oracle-aws-snapshot
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
     environment: ${{ github.event.inputs.TargetEnvironment }}
     timeout-minutes: 1440
     continue-on-error: false
@@ -148,6 +148,7 @@ jobs:
         with:
           role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          role-duration-seconds: 21600
           aws-region: "eu-west-2"
           output-credentials: true
 
