--- a/.github/workflows/oracle-db-release-update.yml
+++ b/.github/workflows/oracle-db-release-update.yml
@@ -109,7 +109,7 @@ jobs:
     environment: ${{ github.event.inputs.TargetEnvironment }}
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
     timeout-minutes: 1440
     continue-on-error: false
     steps:
@@ -167,6 +167,7 @@ jobs:
           role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
+          role-duration-seconds: 21600
 
       # We have not included support for separate Release Update patches for GI and OJVM.
       # Instead only the ComboPatchInfo parameter is allowed to support the Release Update Combo Patch.
